--- a/code/1.ipynb
+++ b/code/1.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T01:17:52.036565Z",
-     "start_time": "2025-11-17T01:17:51.871591Z"
+     "end_time": "2025-11-17T11:45:57.977371Z",
+     "start_time": "2025-11-17T11:45:55.364077Z"
     }
    },
    "cell_type": "code",
@@ -73,13 +73,13 @@
      ]
     }
    ],
-   "execution_count": 29
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T01:23:35.564212Z",
-     "start_time": "2025-11-17T01:23:35.530840Z"
+     "end_time": "2025-11-17T11:45:58.072950Z",
+     "start_time": "2025-11-17T11:45:58.061937Z"
     }
    },
    "cell_type": "code",
@@ -106,11 +106,11 @@
     "y_pred_gd = gd_model.predict(X_test_scaled)\n",
     "\n",
     "# 评估结果\n",
-    "print(\"=== 最小二乘法（LinearRegression） ===\")\n",
+    "print(\"最小二乘法（LinearRegression）\")\n",
     "print(\"MSE:\", mean_squared_error(y_test, y_pred_ls))\n",
     "print(\"R²:\", r2_score(y_test, y_pred_ls))\n",
     "\n",
-    "print(\"\\n=== 梯度下降法（SGDRegressor） ===\")\n",
+    "print(\"\\n梯度下降法（SGDRegressor）\")\n",
     "print(\"MSE:\", mean_squared_error(y_test, y_pred_gd))\n",
     "print(\"R²:\", r2_score(y_test, y_pred_gd))"
    ],
@@ -120,17 +120,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "=== 最小二乘法（LinearRegression） ===\n",
-      "MSE: 27.076445309751257\n",
-      "R²: 0.6307780105854284\n",
+      "最小二乘法（LinearRegression）\n",
+      "MSE: 27.076445309751225\n",
+      "R²: 0.6307780105854288\n",
       "\n",
-      "=== 梯度下降法（SGDRegressor） ===\n",
-      "MSE: 27.37409776656933\n",
-      "R²: 0.6267191383441403\n"
+      "梯度下降法（SGDRegressor）\n",
+      "MSE: 27.374097766569335\n",
+      "R²: 0.6267191383441402\n"
      ]
     }
    ],
-   "execution_count": 35
+   "execution_count": 6
   }
  ],
  "metadata": {
