--- a/code/2.ipynb
+++ b/code/2.ipynb
@@ -6,13 +6,11 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-17T12:19:00.243970Z",
-     "start_time": "2025-11-17T12:18:59.362486Z"
+     "end_time": "2025-11-17T16:09:39.104920Z",
+     "start_time": "2025-11-17T16:09:38.192079Z"
     }
    },
    "source": [
-    "import numpy as np\n",
-    "import pandas as pd\n",
     "from sklearn.datasets import load_breast_cancer\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -29,7 +27,7 @@
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "# 3. 特征标准化（逻辑回归对尺度敏感）\n",
+    "# 3. 特征标准化\n",
     "scaler = StandardScaler()\n",
     "X_train_std = scaler.fit_transform(X_train)\n",
     "X_test_std  = scaler.transform(X_test)"
@@ -40,14 +38,13 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T12:19:00.263991Z",
-     "start_time": "2025-11-17T12:19:00.253478Z"
+     "end_time": "2025-11-17T16:09:39.122329Z",
+     "start_time": "2025-11-17T16:09:39.108925Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 4. 建立逻辑回归模型并训练\n",
-    "#   max_iter 可调大，确保收敛；penalty='l2' 为默认 L2 正则\n",
     "log_reg = LogisticRegression(max_iter=1000, random_state=42)\n",
     "log_reg.fit(X_train_std, y_train)\n",
     "\n",
@@ -56,17 +53,9 @@
     "\n",
     "# 6. 评估\n",
     "acc  = accuracy_score(y_test, y_pred)\n",
-    "prec = precision_score(y_test, y_pred)\n",
-    "rec  = recall_score(y_test, y_pred)\n",
-    "f1   = f1_score(y_test, y_pred)\n",
-    "cm   = confusion_matrix(y_test, y_pred)\n",
     "\n",
     "print(\"===== 逻辑回归在测试集上的性能 =====\")\n",
-    "print(f\"Accuracy : {acc:.4f}\")\n",
-    "print(f\"Precision: {prec:.4f}\")\n",
-    "print(f\"Recall   : {rec:.4f}\")\n",
-    "print(f\"F1-score : {f1:.4f}\")\n",
-    "print(\"Confusion Matrix:\\n\", cm)\n"
+    "print(f\"Accuracy : {acc:.4f}\")"
    ],
    "id": "5fa171fa2ffa7ced",
    "outputs": [
@@ -75,13 +64,7 @@
      "output_type": "stream",
      "text": [
       "===== 逻辑回归在测试集上的性能 =====\n",
-      "Accuracy : 0.9825\n",
-      "Precision: 0.9861\n",
-      "Recall   : 0.9861\n",
-      "F1-score : 0.9861\n",
-      "Confusion Matrix:\n",
-      " [[41  1]\n",
-      " [ 1 71]]\n"
+      "Accuracy : 0.9825\n"
      ]
     }
    ],
