--- a/code/4.ipynb
+++ b/code/4.ipynb
@@ -1,17 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-17T15:32:36.449243Z",
-     "start_time": "2025-11-17T15:32:36.437004Z"
+     "end_time": "2025-11-18T01:04:45.697578Z",
+     "start_time": "2025-11-18T01:04:45.691914Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "import pandas as pd\n",
+    "from sklearn.metrics.cluster import entropy\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "from sklearn.metrics import mutual_info_score\n",
     "import numpy as np\n",
     "\n",
     "# 1. 创建数据集\n",
@@ -25,72 +26,288 @@
     "}\n",
     "df = pd.DataFrame(data)\n",
     "df = df.set_index('序号')\n",
-    "\n",
-    "# 2. 定义计算熵的函数\n",
-    "def calculate_entropy(series):\n",
-    "    \"\"\"计算给定序列的熵\"\"\"\n",
-    "    # 获取序列中每个值的计数\n",
-    "    value_counts = series.value_counts()\n",
-    "    # 计算每个值的概率\n",
-    "    probabilities = value_counts / len(series)\n",
-    "    # 计算熵\n",
-    "    entropy = -np.sum(probabilities * np.log2(probabilities))\n",
-    "    return entropy\n",
-    "\n",
-    "# 3. 定义计算信息增益的函数\n",
-    "def calculate_information_gain(dataframe, feature_name, target_name):\n",
-    "    \"\"\"计算指定特征相对于目标变量的信息增益\"\"\"\n",
-    "    # 计算目标变量的总熵\n",
-    "    total_entropy = calculate_entropy(dataframe[target_name])\n",
-    "\n",
-    "    # 计算特征的加权平均熵\n",
-    "    weighted_entropy = 0\n",
-    "    # 获取特征的唯一值\n",
-    "    feature_values = dataframe[feature_name].unique()\n",
-    "    for value in feature_values:\n",
-    "        # 获取该特征值对应的子集\n",
-    "        subset = dataframe[dataframe[feature_name] == value]\n",
-    "        # 计算子集的权重（即该特征值在数据集中出现的频率）\n",
-    "        weight = len(subset) / len(dataframe)\n",
-    "        # 将子集的熵加到加权平均熵中\n",
-    "        weighted_entropy += weight * calculate_entropy(subset[target_name])\n",
-    "\n",
-    "    # 信息增益是总熵减去加权平均熵\n",
-    "    information_gain = total_entropy - weighted_entropy\n",
-    "    return information_gain\n",
-    "\n",
-    "# 4. 计算每个特征的信息增益\n",
-    "features = ['年龄', '有工作', '有房子', '信用']\n",
-    "target = '类别'\n",
-    "\n",
-    "info_gains = {}\n",
-    "for feature in features:\n",
-    "    info_gains[feature] = calculate_information_gain(df, feature, target)\n",
-    "\n",
-    "# 5. 打印结果并找出最大信息增益的特征\n",
-    "print(\"各个特征的信息增益:\")\n",
-    "for feature, gain in info_gains.items():\n",
-    "    print(f\"  - {feature}: {gain:.4f}\")\n",
-    "\n",
-    "max_gain_feature = max(info_gains, key=info_gains.get)\n",
-    "print(f\"\\n信息增益最大的特征是: '{max_gain_feature}' (增益为: {info_gains[max_gain_feature]:.4f})\")"
+    "df"
    ],
+   "id": "42474416b9c6889b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "    年龄 有工作 有房子   信用 类别\n",
+       "序号                    \n",
+       "0   青年   否   否   一般  否\n",
+       "1   青年   否   否    好  否\n",
+       "2   青年   是   否    好  是\n",
+       "3   青年   是   是   一般  是\n",
+       "4   青年   否   否   一般  否\n",
+       "5   中年   否   否   一般  否\n",
+       "6   中年   否   否    好  否\n",
+       "7   中年   是   是    好  是\n",
+       "8   中年   否   是  非常好  是\n",
+       "9   中年   否   是  非常好  是\n",
+       "10  老年   否   是  非常好  是\n",
+       "11  老年   否   是    好  是\n",
+       "12  老年   是   否    好  是\n",
+       "13  老年   是   否  非常好  是\n",
+       "14  老年   否   否   一般  否"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>年龄</th>\n",
+       "      <th>有工作</th>\n",
+       "      <th>有房子</th>\n",
+       "      <th>信用</th>\n",
+       "      <th>类别</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>序号</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>青年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>否</td>\n",
+       "      <td>一般</td>\n",
+       "      <td>否</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>青年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>否</td>\n",
+       "      <td>好</td>\n",
+       "      <td>否</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>青年</td>\n",
+       "      <td>是</td>\n",
+       "      <td>否</td>\n",
+       "      <td>好</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>青年</td>\n",
+       "      <td>是</td>\n",
+       "      <td>是</td>\n",
+       "      <td>一般</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>青年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>否</td>\n",
+       "      <td>一般</td>\n",
+       "      <td>否</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>中年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>否</td>\n",
+       "      <td>一般</td>\n",
+       "      <td>否</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>中年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>否</td>\n",
+       "      <td>好</td>\n",
+       "      <td>否</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>中年</td>\n",
+       "      <td>是</td>\n",
+       "      <td>是</td>\n",
+       "      <td>好</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>中年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>是</td>\n",
+       "      <td>非常好</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>中年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>是</td>\n",
+       "      <td>非常好</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>老年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>是</td>\n",
+       "      <td>非常好</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>老年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>是</td>\n",
+       "      <td>好</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>老年</td>\n",
+       "      <td>是</td>\n",
+       "      <td>否</td>\n",
+       "      <td>好</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>老年</td>\n",
+       "      <td>是</td>\n",
+       "      <td>否</td>\n",
+       "      <td>非常好</td>\n",
+       "      <td>是</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>老年</td>\n",
+       "      <td>否</td>\n",
+       "      <td>否</td>\n",
+       "      <td>一般</td>\n",
+       "      <td>否</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "59d355f47714a51f"
+  },
+  {
+   "cell_type": "code",
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-11-18T01:04:45.727809Z",
+     "start_time": "2025-11-18T01:04:45.722464Z"
+    }
+   },
+   "source": [
+    "features = ['年龄', '有工作', '有房子', '信用']   # 待考察特征\n",
+    "target = '类别'                                 # 标签列\n",
+    "\n",
+    "# 2. 计算每个特征的信息增益\n",
+    "info_gains = {}\n",
+    "\n",
+    "for feat in features:\n",
+    "    # 2-1 将字符串特征→整数编码\n",
+    "    le_feat = LabelEncoder()\n",
+    "    X_encoded = le_feat.fit_transform(df[feat])\n",
+    "\n",
+    "    # 2-2 将字符串标签→整数编码\n",
+    "    le_target = LabelEncoder()\n",
+    "    y_encoded = le_target.fit_transform(df[target])\n",
+    "\n",
+    "    # 2-3 信息增益\n",
+    "    gain = mutual_info_score(X_encoded, y_encoded)\n",
+    "    info_gains[feat] = gain\n",
+    "\n",
+    "info_gains"
+   ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'年龄': 0.05753641449035618,\n",
+       " '有工作': 0.2243372223364189,\n",
+       " '有房子': 0.29110316603236847,\n",
+       " '信用': 0.2516051918452686}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 18
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T01:05:32.993325Z",
+     "start_time": "2025-11-18T01:05:32.989824Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 3. 输出结果\n",
+    "print(\"各特征的信息增益：\")\n",
+    "for feat, gain in info_gains.items():\n",
+    "    print(f\"{feat}: {gain:.4f}\")\n",
+    "\n",
+    "# 4. 最优特征\n",
+    "best_feature = max(info_gains, key=info_gains.get)\n",
+    "print(f\"\\n信息增益最大的特征是：'{best_feature}' (增益 = {info_gains[best_feature]:.4f})\")"
+   ],
+   "id": "7b33999f0f254885",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "各个特征的信息增益:\n",
-      "  - 年龄: 0.0830\n",
-      "  - 有工作: 0.3237\n",
-      "  - 有房子: 0.4200\n",
-      "  - 信用: 0.3630\n",
+      "各特征的信息增益：\n",
+      "年龄: 0.0575\n",
+      "有工作: 0.2243\n",
+      "有房子: 0.2911\n",
+      "信用: 0.2516\n",
       "\n",
-      "信息增益最大的特征是: '有房子' (增益为: 0.4200)\n"
+      "信息增益最大的特征是：'有房子' (增益 = 0.2911)\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 20
   }
  ],
  "metadata": {
