--- a/code/2.ipynb
+++ b/code/2.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-17T16:09:39.104920Z",
-     "start_time": "2025-11-17T16:09:38.192079Z"
+     "end_time": "2025-11-18T02:49:53.679137Z",
+     "start_time": "2025-11-18T02:49:53.601963Z"
     }
    },
    "source": [
@@ -15,7 +15,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, classification_report\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# 1. 加载数据\n",
     "data = load_breast_cancer()\n",
@@ -33,13 +33,13 @@
     "X_test_std  = scaler.transform(X_test)"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-17T16:09:39.122329Z",
-     "start_time": "2025-11-17T16:09:39.108925Z"
+     "end_time": "2025-11-18T02:49:53.710226Z",
+     "start_time": "2025-11-18T02:49:53.679137Z"
     }
    },
    "cell_type": "code",
@@ -68,7 +68,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 4
   }
  ],
  "metadata": {
