--- a/code/6.ipynb
+++ b/code/6.ipynb
@@ -1,15 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-17T15:49:26.964973Z",
-     "start_time": "2025-11-17T15:49:26.957956Z"
+     "end_time": "2025-11-18T03:12:08.096375Z",
+     "start_time": "2025-11-18T03:12:06.839331Z"
     }
    },
+   "cell_type": "code",
    "source": [
     "import pandas as pd\n",
     "from sklearn.datasets import load_iris\n",
@@ -20,25 +18,198 @@
     "iris = load_iris()\n",
     "X = iris.data          # (150,4)  4 个特征\n",
     "y = iris.target        # (150,)   3 个类别 0/1/2\n",
-    "feature_names = iris.feature_names        # 花瓣长/宽 花萼长/宽\n",
     "target_names  = iris.target_names         # ['setosa' 'versicolor' 'virginica']\n",
     "\n",
-    "# 3. 标准化——PCA 前必须！\n",
+    "target_names"
+   ],
+   "id": "4b5c1aac4ef6ee51",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['setosa', 'versicolor', 'virginica'], dtype='<U10')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "cell_type": "code",
+   "id": "initial_id",
+   "metadata": {
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-11-18T03:12:24.912734Z",
+     "start_time": "2025-11-18T03:12:24.865862Z"
+    }
+   },
+   "source": [
+    "# 3. 标准化\n",
     "X_std = StandardScaler().fit_transform(X)\n",
     "\n",
     "# 4. PCA 降到 2 维\n",
-    "pca = PCA(n_components=2, random_state=0)\n",
+    "pca = PCA(n_components=3, random_state=42)\n",
     "X_pca = pca.fit_transform(X_std)          # (150,2)\n",
     "\n",
-    "# 5. 把降维后的结果整理成 DataFrame，方便后续可视化/保存\n",
-    "df_pca = pd.DataFrame(X_pca, columns=['PC1', 'PC2'])\n",
+    "# 5. 把降维后的结果整理成 DataFrame\n",
+    "df_pca = pd.DataFrame(X_pca, columns=['PC1', 'PC2', 'PC3'])\n",
     "df_pca['Species'] = [target_names[i] for i in y]\n",
     "\n",
-    "# 6. 控制台输出各主成分解释方差比例\n",
-    "print(\"各主成分解释方差比例:\", pca.explained_variance_ratio_)\n",
-    "print(\"累计解释方差比例:\", pca.explained_variance_ratio_.cumsum())\n",
-    "\n"
+    "df_pca"
    ],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "          PC1       PC2       PC3    Species\n",
+       "0   -2.264703  0.480027 -0.127706     setosa\n",
+       "1   -2.080961 -0.674134 -0.234609     setosa\n",
+       "2   -2.364229 -0.341908  0.044201     setosa\n",
+       "3   -2.299384 -0.597395  0.091290     setosa\n",
+       "4   -2.389842  0.646835  0.015738     setosa\n",
+       "..        ...       ...       ...        ...\n",
+       "145  1.870503  0.386966  0.256274  virginica\n",
+       "146  1.564580 -0.896687 -0.026371  virginica\n",
+       "147  1.521170  0.269069  0.180178  virginica\n",
+       "148  1.372788  1.011254  0.933395  virginica\n",
+       "149  0.960656 -0.024332  0.528249  virginica\n",
+       "\n",
+       "[150 rows x 4 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-2.264703</td>\n",
+       "      <td>0.480027</td>\n",
+       "      <td>-0.127706</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-2.080961</td>\n",
+       "      <td>-0.674134</td>\n",
+       "      <td>-0.234609</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-2.364229</td>\n",
+       "      <td>-0.341908</td>\n",
+       "      <td>0.044201</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-2.299384</td>\n",
+       "      <td>-0.597395</td>\n",
+       "      <td>0.091290</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-2.389842</td>\n",
+       "      <td>0.646835</td>\n",
+       "      <td>0.015738</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>1.870503</td>\n",
+       "      <td>0.386966</td>\n",
+       "      <td>0.256274</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>1.564580</td>\n",
+       "      <td>-0.896687</td>\n",
+       "      <td>-0.026371</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>1.521170</td>\n",
+       "      <td>0.269069</td>\n",
+       "      <td>0.180178</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>1.372788</td>\n",
+       "      <td>1.011254</td>\n",
+       "      <td>0.933395</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>0.960656</td>\n",
+       "      <td>-0.024332</td>\n",
+       "      <td>0.528249</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 4 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-18T03:12:09.969242400Z",
+     "start_time": "2025-11-18T01:55:25.787048Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 6. 各主成分解释方差比例\n",
+    "print(\"各主成分解释方差比例:\", pca.explained_variance_ratio_)\n",
+    "print(\"累计解释方差比例:\", pca.explained_variance_ratio_.cumsum())"
+   ],
+   "id": "a92a1e277fbaa7b3",
    "outputs": [
     {
      "name": "stdout",
@@ -49,7 +220,7 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 15
   }
  ],
  "metadata": {
