--- a/code/5.ipynb
+++ b/code/5.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-18T01:13:29.761333Z",
-     "start_time": "2025-11-18T01:13:28.241625Z"
+     "end_time": "2025-11-18T01:47:55.069913Z",
+     "start_time": "2025-11-18T01:47:55.024369Z"
     }
    },
    "source": [
@@ -177,18 +177,18 @@
        "       [5.9, 3. , 5.1, 1.8]])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T01:13:31.281020Z",
-     "start_time": "2025-11-18T01:13:29.764383Z"
+     "end_time": "2025-11-18T01:47:55.302138Z",
+     "start_time": "2025-11-18T01:47:55.189884Z"
     }
    },
    "cell_type": "code",
@@ -213,11 +213,21 @@
      "output_type": "stream",
      "text": [
       "n_clusters=2 时的轮廓系数: 0.6810\n",
-      "n_clusters=3 时的轮廓系数: 0.5512\n"
+      "n_clusters=3 时的轮廓系数: 0.5528\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\software\\anaconda3\\envs\\homework\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1332: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n",
+      "C:\\software\\anaconda3\\envs\\homework\\lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1332: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=1.\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 4
   }
  ],
  "metadata": {
